; ModuleID = '/home/carl/AnghaBench/esp-idf/examples/protocols/mdns/main/extr_mdns_example_main.c_query_mdns_service.c'
source_filename = "/home/carl/AnghaBench/esp-idf/examples/protocols/mdns/main/extr_mdns_example_main.c_query_mdns_service.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TAG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [23 x i8] c"Query PTR: %s.%s.local\00", align 1
@.str.1 = private unnamed_addr constant [17 x i8] c"Query Failed: %s\00", align 1
@.str.2 = private unnamed_addr constant [18 x i8] c"No results found!\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i8*)* @query_mdns_service to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @query_mdns_service(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %7 = load i32, i32* @TAG, align 4
  %8 = load i8*, i8** %3, align 8
  %9 = load i8*, i8** %4, align 8
  %10 = call i32 @ESP_LOGI(i32 %7, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0), i8* %8, i8* %9)
  store i32* null, i32** %5, align 8
  %11 = load i8*, i8** %3, align 8
  %12 = load i8*, i8** %4, align 8
  %13 = call i64 @mdns_query_ptr(i8* %11, i8* %12, i32 3000, i32 20, i32** %5)
  store i64 %13, i64* %6, align 8
  %14 = load i64, i64* %6, align 8
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %21

16:                                               ; preds = %2
  %17 = load i32, i32* @TAG, align 4
  %18 = load i64, i64* %6, align 8
  %19 = call i32 @esp_err_to_name(i64 %18)
  %20 = call i32 @ESP_LOGE(i32 %17, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.1, i64 0, i64 0), i32 %19)
  br label %32

21:                                               ; preds = %2
  %22 = load i32*, i32** %5, align 8
  %23 = icmp ne i32* %22, null
  br i1 %23, label %27, label %24

24:                                               ; preds = %21
  %25 = load i32, i32* @TAG, align 4
  %26 = call i32 @ESP_LOGW(i32 %25, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.2, i64 0, i64 0))
  br label %32

27:                                               ; preds = %21
  %28 = load i32*, i32** %5, align 8
  %29 = call i32 @mdns_print_results(i32* %28)
  %30 = load i32*, i32** %5, align 8
  %31 = call i32 @mdns_query_results_free(i32* %30)
  br label %32

32:                                               ; preds = %27, %24, %16
  ret void
}

declare dso_local i32 @ESP_LOGI(i32, i8*, i8*, i8*) #1

declare dso_local i64 @mdns_query_ptr(i8*, i8*, i32, i32, i32**) #1

declare dso_local i32 @ESP_LOGE(i32, i8*, i32) #1

declare dso_local i32 @esp_err_to_name(i64) #1

declare dso_local i32 @ESP_LOGW(i32, i8*) #1

declare dso_local i32 @mdns_print_results(i32*) #1

declare dso_local i32 @mdns_query_results_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
